--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="keywords" content="">
   <meta name="author" content="Parastone">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="image/x-icon">  
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://thehealthyhumans.in" />
