--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
                 <li><i class="icofont-tick-mark"></i> Live session anywhere in gym
                   or home.</li>
               </ul>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnlw3yK4Yl29w" async> </script> </form>
             </div>
           </div>
         </div>
