--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
                 <li><i class="icofont-tick-mark"></i> Habit Tracker</li>
                 <li><i class="icofont-tick-mark"></i> Every week weight /fat percentage check in</li>
               </ul>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnlw3yK4Yl29w" async> </script> </form>
             </div>
           </div>
         </div>
@@ -399,6 +400,7 @@
                 <li><i class="icofont-tick-mark"></i> Habit Tracker</li>
                 <li><i class="icofont-tick-mark"></i> Every week weight/fat prcentage check in.</li>
               </ul>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnsq2EL1gxfnI" async> </script> </form>
             </div>
           </div>
         </div>
@@ -427,7 +429,7 @@
                 <li><i class="icofont-tick-mark"></i> Live session anywhere in gym
                   or home.</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnlw3yK4Yl29w" async> </script> </form>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnuNkSCzYfE7k" async> </script> </form>
             </div>
           </div>
         </div>
@@ -455,6 +457,7 @@
                   gym or home</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support</li>
               </ul>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnwt99ACC5oXg" async> </script> </form>
             </div>
           </div>
         </div>
@@ -482,6 +485,7 @@
                 <li><i class="icofont-tick-mark"></i> Workout library with Live coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support.</li>
               </ul>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnyIzDzzygcTw" async> </script> </form>
             </div>
           </div>
         </div>
@@ -509,7 +513,7 @@
                 <li><i class="icofont-tick-mark"></i> Workout library with Live coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support.</li>
               </ul>
-              
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnzca0Ln2eTIB" async> </script> </form>
             </div>
           </div>
         </div>
