--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 </head>
 
 <body>
+  
+<!--  FLOATIG WHATSAPP ICON STARTS  -->
+<a href="https://wa.link/erhel7" class="float" target="_blank">
+<i class="icofont-whatsapp my-float"></i>
+</a>
+<!--  FLOATING WHATSAPP ICON ENDS  -->
   <!-- HEADER STARTS -->
   <header class="site-header navbar-dark">
     <div id="header-wrap" class="position-absolute w-100 z-index-1">
