--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
 <!--  FLOATIG WHATSAPP ICON STARTS  -->
 <a href="https://wa.link/erhel7" class="float" target="_blank">
-<i class="icofont-whatsapp my-float"></i>
+<i class="icofont-brand-whatsapp my-float"></i>
 </a>
 <!--  FLOATING WHATSAPP ICON ENDS  -->
   <!-- HEADER STARTS -->
