--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
   
 <!--  FLOATIG WHATSAPP ICON STARTS  -->
 <a href="https://wa.link/erhel7" class="float" target="_blank">
-<i class="icofont-brand-whatsapp my-float"></i>
+  <i class="icofont-brand-whatsapp my-float"></i>
 </a>
 <!--  FLOATING WHATSAPP ICON ENDS  -->
+  
+ <!--  FLOATIG CALL ICON STARTS  -->
+<a href="tel:+91 93241 78258" class="call-float">
+  <i class="icofont-phone-circle my-call-float"></i>
+</a>
+<!--  FLOATING CALL ICON ENDS  -->
+  
+  
   <!-- HEADER STARTS -->
   <header class="site-header navbar-dark">
     <div id="header-wrap" class="position-absolute w-100 z-index-1">
