--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="keywords" content="">
   <meta name="author" content="Parastone">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="image/x-icon">
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://thehealthyhumans.in" />
@@ -45,20 +45,20 @@
 </head>
 
 <body>
-  
-<!--  FLOATIG WHATSAPP ICON STARTS  -->
-<a href="https://wa.link/erhel7" class="float" target="_blank">
-  <i class="icofont-brand-whatsapp my-float"></i>
-</a>
-<!--  FLOATING WHATSAPP ICON ENDS  -->
-  
- <!--  FLOATIG CALL ICON STARTS  -->
-<a href="tel:+91 93241 78258" class="call-float">
-  <i class="icofont-phone-circle my-call-float"></i>
-</a>
-<!--  FLOATING CALL ICON ENDS  -->
-  
-  
+
+  <!--  FLOATIG WHATSAPP ICON STARTS  -->
+  <a href="https://wa.link/erhel7" class="float" target="_blank">
+    <i class="icofont-brand-whatsapp my-float"></i>
+  </a>
+  <!--  FLOATING WHATSAPP ICON ENDS  -->
+
+  <!--  FLOATIG CALL ICON STARTS  -->
+  <a href="tel:+91 93241 78258" class="call-float">
+    <i class="icofont-phone-circle my-call-float"></i>
+  </a>
+  <!--  FLOATING CALL ICON ENDS  -->
+
+
   <!-- HEADER STARTS -->
   <header class="site-header navbar-dark">
     <div id="header-wrap" class="position-absolute w-100 z-index-1">
@@ -94,6 +94,10 @@
 
                   <li class="nav-item">
                     <a class="nav-link" href="#testimonials">Testimonials</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="#offers">Latest Offers</a>
                   </li>
 
                   <li class="nav-item">
@@ -365,6 +369,53 @@
   </section>
   <!-- SECTION FIVE ENDS -->
 
+  <!-- OFFER SECTION STARTS -->
+
+  <section id="offers" class="home-section-offer">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="section-offer-image wow fadeIn" data-wow-delay="300ms">
+            <img src="assets/images/mothers-day-offer-banner.jpg">
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="section-offer-content">
+            <small class="wow slideInRight" data-wow-delay="500ms">Latest Offers</small>
+            <h2 class="wow slideInRight" data-wow-delay="600ms">Celebrate Mother's Day with 50% Sale Offer</h2>
+
+            <div class="package-wrapper mb-4 wow slideInRight" data-wow-delay="800ms">
+              <div class="package-duration text-center package-three-top-border">
+                <h4>4 Weeks (Let's Begin)</h4>
+                <span class="badge bg-danger">Valid Till: 8th May 2022</span>
+              </div>
+              <div class="package-details text-center package-three-bottom-border">
+                <h3 class="package-price">₹1,500/-</h3>
+                <h6 class="striked-price">₹ 3,000/-</h6>
+                <h5 class="package-title">Package for Diet & Workout Plan Only</h5>
+                <ul class="package-list">
+                  <li><i class="icofont-tick-mark"></i> Onboarding Consultation Call.</li>
+                  <li><i class="icofont-tick-mark"></i> Diet plan & workout plan according to the goals.</li>
+                  <li><i class="icofont-tick-mark"></i> Follow up everyday through app.</li>
+                  <li><i class="icofont-tick-mark"></i> Every week on call discussion with coach</li>
+                  <li><i class="icofont-tick-mark"></i> Habit Tracker</li>
+                  <li><i class="icofont-tick-mark"></i> Every week weight /fat percentage check in</li>
+                </ul>
+                <form>
+                  <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                    data-payment_button_id="pl_JPXfs8cy0aulzH" async> </script>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- OFFER SECTION ENDS -->
+
   <!-- SECTION SIX STARTS -->
 
   <section id="our-packages" class="home-section-six">
@@ -391,7 +442,10 @@
                 <li><i class="icofont-tick-mark"></i> Habit Tracker</li>
                 <li><i class="icofont-tick-mark"></i> Every week weight /fat percentage check in</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnlw3yK4Yl29w" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnlw3yK4Yl29w" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -414,7 +468,10 @@
                 <li><i class="icofont-tick-mark"></i> Habit Tracker</li>
                 <li><i class="icofont-tick-mark"></i> Every week weight/fat prcentage check in.</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnsq2EL1gxfnI" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnsq2EL1gxfnI" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -443,7 +500,10 @@
                 <li><i class="icofont-tick-mark"></i> Live session anywhere in gym
                   or home.</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnuNkSCzYfE7k" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnuNkSCzYfE7k" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -471,7 +531,10 @@
                   gym or home</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnwt99ACC5oXg" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnwt99ACC5oXg" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -488,7 +551,7 @@
               <h5 class="package-title">Live Personal Training/ Nutrition consultation plan with
                 Two Personal Trainer</h5>
               <ul class="package-list">
-                <li><i class="icofont-tick-mark"></i> Two Personal Coach for two 
+                <li><i class="icofont-tick-mark"></i> Two Personal Coach for two
                   different formats.</li>
                 <li><i class="icofont-tick-mark"></i> All 6 days coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Dedicated Nutritionist.</li>
@@ -499,7 +562,10 @@
                 <li><i class="icofont-tick-mark"></i> Workout library with Live coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support.</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnyIzDzzygcTw" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnyIzDzzygcTw" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -516,7 +582,7 @@
               <h5 class="package-title">Live Personal Training/ Nutrition consultation plan with
                 Two Personal Trainer</h5>
               <ul class="package-list">
-                <li><i class="icofont-tick-mark"></i> Two Personal Coach for two 
+                <li><i class="icofont-tick-mark"></i> Two Personal Coach for two
                   different formats.</li>
                 <li><i class="icofont-tick-mark"></i> All 6 days coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Dedicated Nutritionist.</li>
@@ -527,7 +593,10 @@
                 <li><i class="icofont-tick-mark"></i> Workout library with Live coaching.</li>
                 <li><i class="icofont-tick-mark"></i> Supplementation Support.</li>
               </ul>
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JKnzca0Ln2eTIB" async> </script> </form>
+              <form>
+                <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                  data-payment_button_id="pl_JKnzca0Ln2eTIB" async> </script>
+              </form>
             </div>
           </div>
         </div>
@@ -622,11 +691,13 @@
           <div class="footer-col-two">
             <h4>Useful Links</h4>
             <ul class="footer-list">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#our-team">Our Team</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#offers">Offers</a></li>
+              <li><a href="#our-packages">Our Package</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
             </ul>
           </div>
         </div>
@@ -646,7 +717,7 @@
           <div class="footer-col-three">
             <h4>Connect with Us</h4>
             <div class="wrapper">
-              <a href="https://facebook.com" target="blank">
+              <a href="https://www.facebook.com/thehealthyhumans0913" target="blank">
                 <div class="icon facebook wow fadeIn" data-wow-delay="500ms">
                   <div class="tooltip">Facebook</div>
                   <span><i class="icofont-facebook"></i></span>
@@ -658,7 +729,7 @@
                   <span><i class="icofont-twitter"></i></span>
                 </div>
               </a>
-              <a href="https://instagram.com" target="blank">
+              <a href="https://www.instagram.com/the_healthyhumans/" target="blank">
                 <div class="icon instagram wow fadeIn" data-wow-delay="1100ms">
                   <div class="tooltip">Instagram</div>
                   <span><i class="icofont-instagram"></i></span>
