--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,30 +61,34 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link navbar-active" href="index.html">Home</a>
+                                        <a class="nav-link navbar-active" href="#">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">About Us</a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Services</a>
+                                        <a class="nav-link" href="#about-us">About Us</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Operations</a>
+                                        <a class="nav-link" href="#services">Services</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Testimonials</a>
+                                        <a class="nav-link" href="#our-operations">Our Operations</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Packages</a>
+                                        <a class="nav-link" href="#testimonials">Testimonials</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Contact Us</a>
+                                        <a class="nav-link" href="#offers">Latest Offers</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#our-packages">Our Packages</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#contact-us">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
@@ -369,89 +373,91 @@
     </section>
 
     <!-- FOOTER STARTS -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-          <div class="footer-logo">
-            <img src="assets/images/logo/The Healthy Humans-bg.jpg">
-          </div>
-          <div class="footer-one">
-            <ul class="footer-list">
-              <li><i class="icofont-ui-call"></i>
-                <a href="tel:+919324178258">+91 93241 78258</a>
-              </li>
-              <li>
-                <i class="icofont-envelope"></i>
-                <a href="mailto:enquiries@thehealthyhumans.in">enquiries@thehealthyhumans.in</a>
-              </li>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="footer-logo">
+                        <img src="assets/images/logo/The Healthy Humans-bg.jpg">
+                    </div>
+                    <div class="footer-one">
+                        <ul class="footer-list">
+                            <li><i class="icofont-ui-call"></i>
+                                <a href="tel:+919324178258">+91 93241 78258</a>
+                            </li>
+                            <li>
+                                <i class="icofont-envelope"></i>
+                                <a href="mailto:enquiries@thehealthyhumans.in">enquiries@thehealthyhumans.in</a>
+                            </li>
 
-              <li>
-                <i class="icofont-location-pin"></i>
-                A-6, 304, Unique Heights, Poonam Garden, Mira Road East, Thane-401107
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-          <div class="footer-col-two">
-            <h4>Useful Links</h4>
-            <ul class="footer-list">
-              <li><a href="index.html">About Us</a></li>
-              <li><a href="index.html">Services</a></li>
-              <li><a href="index.html">Our Team</a></li>
-              <li><a href="index.html">Testimonials</a></li>
-              <li><a href="index.html">Contact Us</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-          <div class="footer-col-two">
-            <h4>Important Links</h4>
-            <ul class="footer-list">
-              <li><a href="terms-conditions.html">Terms & Conditions</a></li>
-              <li><a href="privacy-policy.html">Privacy Policy</a></li>
-              <li><a href="refund-cancellation.html">Refund & Cancellation</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-          <div class="footer-col-three">
-            <h4>Connect with Us</h4>
-            <div class="wrapper">
-              <a href="https://facebook.com" target="blank">
-                <div class="icon facebook wow fadeIn" data-wow-delay="500ms">
-                  <div class="tooltip">Facebook</div>
-                  <span><i class="icofont-facebook"></i></span>
+                            <li>
+                                <i class="icofont-location-pin"></i>
+                                A-6, 304, Unique Heights, Poonam Garden, Mira Road East, Thane-401107
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-              </a>
-              <a href="https://twitter.com" target="blank">
-                <div class="icon twitter wow fadeIn" data-wow-delay="800ms">
-                  <div class="tooltip">Twitter</div>
-                  <span><i class="icofont-twitter"></i></span>
+
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="footer-col-two">
+                        <h4>Useful Links</h4>
+                        <ul class="footer-list">
+                            <li><a href="#about-us">About Us</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#our-team">Our Team</a></li>
+                            <li><a href="#testimonials">Testimonials</a></li>
+                            <li><a href="#offers">Offers</a></li>
+                            <li><a href="#our-packages">Our Package</a></li>
+                            <li><a href="#contact-us">Contact Us</a></li>
+                        </ul>
+                    </div>
                 </div>
-              </a>
-              <a href="https://instagram.com" target="blank">
-                <div class="icon instagram wow fadeIn" data-wow-delay="1100ms">
-                  <div class="tooltip">Instagram</div>
-                  <span><i class="icofont-instagram"></i></span>
+
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="footer-col-two">
+                        <h4>Important Links</h4>
+                        <ul class="footer-list">
+                            <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="refund-cancellation.html">Refund & Cancellation</a></li>
+                        </ul>
+                    </div>
                 </div>
-              </a>
+
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="footer-col-three">
+                        <h4>Connect with Us</h4>
+                        <div class="wrapper">
+                            <a href="https://www.facebook.com/thehealthyhumans0913" target="blank">
+                                <div class="icon facebook wow fadeIn" data-wow-delay="500ms">
+                                    <div class="tooltip">Facebook</div>
+                                    <span><i class="icofont-facebook"></i></span>
+                                </div>
+                            </a>
+                            <a href="https://twitter.com" target="blank">
+                                <div class="icon twitter wow fadeIn" data-wow-delay="800ms">
+                                    <div class="tooltip">Twitter</div>
+                                    <span><i class="icofont-twitter"></i></span>
+                                </div>
+                            </a>
+                            <a href="https://www.instagram.com/the_healthyhumans/" target="blank">
+                                <div class="icon instagram wow fadeIn" data-wow-delay="1100ms">
+                                    <div class="tooltip">Instagram</div>
+                                    <span><i class="icofont-instagram"></i></span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="footer-two">
-      <p>&copy; 2021 The Healty Humans All Rights Reserved. Designed & Developed by <a
-          href="https://parastone.in">Parastone</a></p>
-    </div>
-  </footer>
-  <!-- FOOTER ENDS -->
+        <div class="footer-two">
+            <p>&copy; 2021 The Healty Humans All Rights Reserved. Designed & Developed by <a
+                    href="https://parastone.in">Parastone</a></p>
+        </div>
+    </footer>
+    <!-- FOOTER ENDS -->
 </body>
 
 </html>
