--- a/refund-cancellation.html
+++ b/refund-cancellation.html
@@ -2,119 +2,123 @@
 <html lang="en">
 
 <head>
-    <!--META TAGS  -->
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="Parastone">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--META TAGS  -->
+  <meta charset="UTF-8">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Parastone">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CANONICAL -->
-    <link rel="canonical" href="https://yourdoaminname.com/" />
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://yourdoaminname.com/" />
 
-    <!-- TITLE -->
-    <title>Refund & Cancellation | The Healthy Humans</title>
+  <!-- TITLE -->
+  <title>Refund & Cancellation | The Healthy Humans</title>
 
-    <!-- BOOTSTRAP -->
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- BOOTSTRAP -->
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
+  <!-- STYLESHEETS -->
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/fonts.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
 
-    <!-- ICOFONTS -->
-    <link rel="stylesheet" href="assets/icofont/icofont.min.css">
+  <!-- ICOFONTS -->
+  <link rel="stylesheet" href="assets/icofont/icofont.min.css">
 
-    <!-- OWL CAROUSEL CSS -->
-    <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.theme.default.min.css">
+  <!-- OWL CAROUSEL CSS -->
+  <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.theme.default.min.css">
 
-    <!-- SCRIPTS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/owl-carousel/dist/owl.carousel.min.js"></script>
+  <!-- SCRIPTS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script src="assets/owl-carousel/dist/owl.carousel.min.js"></script>
 </head>
 
 <body>
-    <!-- HEADER STARTS -->
-    <header class="site-header navbar-dark">
-        <div id="header-wrap" class="position-absolute w-100 z-index-1">
-            <div class="container">
-                <div class="row">
-                    <!--MENU STARTS-->
-                    <div class="col">
-                        <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brandlogo text-white h2 mb-0" href="index.html">
-                                <img class="img-fluid" src="assets/images/logo/The Healthy Humans.png"
-                                    alt="The Healthy Humans" title="The Healthy Humans Logo">
-                            </a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                                <ul class="navbar-nav ms-auto">
-                                    <li class="nav-item">
-                                        <a class="nav-link navbar-active" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">About Us</a>
-                                    </li>
+  <!-- HEADER STARTS -->
+  <header class="site-header navbar-dark">
+    <div id="header-wrap" class="position-absolute w-100 z-index-1">
+      <div class="container">
+        <div class="row">
+          <!--MENU STARTS-->
+          <div class="col">
+            <nav class="navbar navbar-expand-lg">
+              <a class="navbar-brandlogo text-white h2 mb-0" href="index.html">
+                <img class="img-fluid" src="assets/images/logo/The Healthy Humans.png" alt="The Healthy Humans"
+                  title="The Healthy Humans Logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link navbar-active" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about-us">About Us</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Services</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Operations</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#our-operations">Our Operations</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Testimonials</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#testimonials">Testimonials</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Packages</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#offers">Latest Offers</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Contact Us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                    <!--MENU ENDS-->
-                </div>
-            </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#our-packages">Our Packages</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact-us">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+          <!--MENU ENDS-->
         </div>
-    </header>
-    <!-- HEADER ENDS -->
+      </div>
+    </div>
+  </header>
+  <!-- HEADER ENDS -->
 
-    <!-- PAGE TITLE STARTS -->
-    <section class="page-title">
-        <div class="container">
-            <h4>Refund & Cancellation</h4>
-        </div>
-    </section>
-    <!-- PAGE TITLE ENDS -->
+  <!-- PAGE TITLE STARTS -->
+  <section class="page-title">
+    <div class="container">
+      <h4>Refund & Cancellation</h4>
+    </div>
+  </section>
+  <!-- PAGE TITLE ENDS -->
 
-    <!-- PAGE CONTENT STARTS -->
-    <section class="page-content">
-        <div class="container">
-            <small>Refund & Cancellation Policy</small>            
-            <p>The company has no refund policy. Although a member can transfer his/her membership only once 
-                Further communication will be done by management during the transfer process.</p>
-        </div>
-    </section>
+  <!-- PAGE CONTENT STARTS -->
+  <section class="page-content">
+    <div class="container">
+      <small>Refund & Cancellation Policy</small>
+      <p>The company has no refund policy. Although a member can transfer his/her membership only once
+        Further communication will be done by management during the transfer process.</p>
+    </div>
+  </section>
 
-    <!-- FOOTER STARTS -->
+  <!-- FOOTER STARTS -->
   <footer>
     <div class="container">
       <div class="row">
@@ -125,7 +129,7 @@
           <div class="footer-one">
             <ul class="footer-list">
               <li><i class="icofont-ui-call"></i>
-                <a href="tel:+919324178258"> +91 93241 78258</a>
+                <a href="tel:+919324178258">+91 93241 78258</a>
               </li>
               <li>
                 <i class="icofont-envelope"></i>
@@ -144,11 +148,13 @@
           <div class="footer-col-two">
             <h4>Useful Links</h4>
             <ul class="footer-list">
-              <li><a href="index.html">About Us</a></li>
-              <li><a href="index.html">Services</a></li>
-              <li><a href="index.html">Our Team</a></li>
-              <li><a href="index.html">Testimonials</a></li>
-              <li><a href="index.html">Contact Us</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#our-team">Our Team</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#offers">Offers</a></li>
+              <li><a href="#our-packages">Our Package</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
             </ul>
           </div>
         </div>
@@ -168,7 +174,7 @@
           <div class="footer-col-three">
             <h4>Connect with Us</h4>
             <div class="wrapper">
-              <a href="https://facebook.com" target="blank">
+              <a href="https://www.facebook.com/thehealthyhumans0913" target="blank">
                 <div class="icon facebook wow fadeIn" data-wow-delay="500ms">
                   <div class="tooltip">Facebook</div>
                   <span><i class="icofont-facebook"></i></span>
@@ -180,7 +186,7 @@
                   <span><i class="icofont-twitter"></i></span>
                 </div>
               </a>
-              <a href="https://instagram.com" target="blank">
+              <a href="https://www.instagram.com/the_healthyhumans/" target="blank">
                 <div class="icon instagram wow fadeIn" data-wow-delay="1100ms">
                   <div class="tooltip">Instagram</div>
                   <span><i class="icofont-instagram"></i></span>
@@ -203,6 +209,6 @@
 </html>
 
 <script>
-    // WOW JS INTITATED
-    new WOW().init();
+  // WOW JS INTITATED
+  new WOW().init();
 </script>
